--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -16,6 +16,21 @@
         document.getElementsByTagName('head')[0].append(script);
       }
     </script>
+
+    <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="b38eed4f-0031-45c4-b34a-e5c126b38b68";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+
+    <!-- Hotjar Tracking Code for Bulk Image -->
+    <script>
+      (function(h,o,t,j,a,r){
+          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+          h._hjSettings={hjid:3581851,hjsv:6};
+          a=o.getElementsByTagName('head')[0];
+          r=o.createElement('script');r.async=1;
+          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+          a.appendChild(r);
+      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
+
   </head>
   <body>
     <div id="app"><!--index.jsx injects App.jsx here--></div>
