--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -21,6 +21,10 @@
 
     <!-- Hotjar Tracking Code for Bulk Image -->
     <script>
+      if (global == undefined) {
+        var global = window;
+      }
+
       (function(h,o,t,j,a,r){
           h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
           h._hjSettings={hjid:3581851,hjsv:6};
